changing project theme
Changing project theme to blue and white instead of indigo and pink

--- a/src/app/app-main.component.html
+++ b/src/app/app-main.component.html
@@ -5,6 +5,6 @@
     title="Página Inicial"></u-header>
 </div>
 <div class="body">
-  <button (click)="test()">Teste</button>
+  <button mat-flat-button color="warn" (click)="test()">Teste</button>
 </div>
 <router-outlet></router-outlet>
