login and register implementations

--- a/src/app/app-main.component.html
+++ b/src/app/app-main.component.html
@@ -1,10 +1,7 @@
-<div class="toolbar" role="banner">
+<div class="toolbar">
   <u-header
     [canGoBack]="false"
-    [isProfile]="false"
+    [isProfile]="true"
     title="Página Inicial"></u-header>
-</div>
-<div class="body">
-  <button mat-flat-button color="warn" (click)="test()">Teste</button>
 </div>
 <router-outlet></router-outlet>
