--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,12 +3,16 @@
 @include mat-core();
 
 $custom-app-primary: mat-palette($mat-blue, A700);
-$custom-app-accent: mat-palette($mat-blue, 500);
+$custom-app-accent: mat-palette($mat-indigo, 50);
 $custom-app-warn: mat-palette($mat-red);
 
 $custom-theme: mat-light-theme($custom-app-primary, $custom-app-accent, $custom-app-warn);
 
 @include angular-material-theme($custom-theme);
+
+@import "materialize-css/sass/components/color-variables";
+$secondary-color: color("blue-grey", "darken-4");
+@import "materialize-css/sass/materialize";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
